<?php

namespace AbstractFactory\Ingredient\Cheese;

interface Cheese
{
    public function getName(): string;
}