<?php

namespace AbstractFactory\Ingredient\Clams;

interface Clams
{
    function getName(): string;
}