<?php

namespace AbstractFactory\Ingredient\Sauce;

interface Sauce
{
    public function getName(): string;
}